// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/AddButton Default 1`] = `
<button
  className="sc-gsTCUz hhyhje"
  onClick={[Function]}
>
  <svg>
    iconmonstr-plus-2.svg
  </svg>
</button>
`;

exports[`Storyshots Atoms/AddButton Playground 1`] = `
<button
  className="sc-gsTCUz hhyhje"
  onClick={[Function]}
>
  <svg>
    iconmonstr-plus-2.svg
  </svg>
</button>
`;

exports[`Storyshots Atoms/Card Default 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-dlfnbm gqONlB"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-eCssSg kxVLt"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Card For List 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-dlfnbm jzxTJJ"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-eCssSg kxVLt"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Card Playground 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-dlfnbm gqONlB"
  >
    <div
      className="sc-hKgILt hABwZ"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-eCssSg kxVLt"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-jSgupP cPzjif"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/FilterCard Default 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-gKsewC fuPUuw"
  >
    <div
      className="sc-iBPRYJ dBmtrq"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-fubCfw UXmyw"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-pFZIQ imkGos"
    >
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/FilterCard For List 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-gKsewC iDzaSE"
  >
    <div
      className="sc-iBPRYJ dBmtrq"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-fubCfw UXmyw"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-pFZIQ imkGos"
    >
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/FilterCard Playground 1`] = `
<div
  className="sc-bdfBwQ bMBlQa"
>
  <div
    className="sc-gKsewC fuPUuw"
  >
    <div
      className="sc-iBPRYJ dBmtrq"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-fubCfw UXmyw"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-pFZIQ imkGos"
    >
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/FiltersViewer Default 1`] = `
<div
  className="sc-crrsfI ixJYMs"
>
  <div
    className="sc-gKsewC fuPUuw"
  >
    <div
      className="sc-iBPRYJ dBmtrq"
    >
      <h4>
        canny
      </h4>
    </div>
    <div
      className="sc-pFZIQ imkGos"
    >
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/FiltersViewer Playground 1`] = `
<div
  className="sc-crrsfI ixJYMs"
>
  <div
    className="sc-gKsewC fuPUuw"
  >
    <div
      className="sc-iBPRYJ dBmtrq"
    >
      <h4>
        canny
      </h4>
    </div>
    <div
      className="sc-pFZIQ imkGos"
    >
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/ImageHolder Primary 1`] = `
<div
  className="sc-dQppl txbqs"
>
  <div
    className="sc-bqyKva gEOZoP"
  >
    
  </div>
</div>
`;

exports[`Storyshots Molecules/ImageUploader Default 1`] = `
<div
  className="sc-kstrdz bmZTOO"
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
>
  <div
    className="sc-hBEYos fQLdmT"
  >
    
    <div
      className="sc-fodVxV kCdHDl"
    >
      <div
        className="sc-fFubgz jBxpvX"
      >
        <svg>
          upload.svg
        </svg>
      </div>
      <span>
        Drag & Drop files here or click to upload
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/ImageUploader Playground 1`] = `
<div
  className="sc-kstrdz bmZTOO"
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
>
  <div
    className="sc-hBEYos fQLdmT"
  >
    
    <div
      className="sc-fodVxV kCdHDl"
    >
      <div
        className="sc-fFubgz jBxpvX"
      >
        <svg>
          upload.svg
        </svg>
      </div>
      <span>
        Drag & Drop files here or click to upload
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/ModulesSearcher Default 1`] = `
<div
  className="sc-bkzZxe fIovDh"
>
  <div
    className="sc-gKsewC iDzaSE"
  >
    <div
      className="sc-iBPRYJ dBmtrq"
    >
      <h4>
        canny
      </h4>
      <button
        className="sc-fubCfw UXmyw"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-pFZIQ imkGos"
    >
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
  <div
    className="sc-gKsewC iDzaSE"
  >
    <div
      className="sc-iBPRYJ dBmtrq"
    >
      <h4>
        NotCanny
      </h4>
      <button
        className="sc-fubCfw UXmyw"
        onClick={[Function]}
      >
        <svg>
          iconmonstr-plus-2.svg
        </svg>
      </button>
    </div>
    <div
      className="sc-pFZIQ imkGos"
    >
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/ModulesSearcher Playground 1`] = `
<div
  className="sc-bkzZxe dYpMYW"
>
  <div
    className="sc-gKsewC iDzaSE"
  >
    <div
      className="sc-iBPRYJ dBmtrq"
    >
      <h4>
        canny
      </h4>
    </div>
    <div
      className="sc-pFZIQ imkGos"
    >
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
  <div
    className="sc-gKsewC iDzaSE"
  >
    <div
      className="sc-iBPRYJ dBmtrq"
    >
      <h4>
        NotCanny
      </h4>
    </div>
    <div
      className="sc-pFZIQ imkGos"
    >
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold1
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={100}
        />
      </div>
      <div
        className="sc-jrAGrp bxPRNK"
      >
        <label
          className="sc-iqHYGH eSpVgP"
          htmlFor="Name"
        >
          threshold2
        </label>
        <input
          className="sc-kEjbxe cfehNQ"
          id="Name"
          name="Name"
          onChange={[Function]}
          type="number"
          value={180}
        />
      </div>
    </div>
  </div>
</div>
`;
